Fix z-index for side contents

--- a/src/app/core/pure-side-menu/pure-side-menu.component.scss
+++ b/src/app/core/pure-side-menu/pure-side-menu.component.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
   box-sizing: border-box;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .35);
-  z-index: 9999;
+  z-index: 9000;
   .pure-menu-wrapper {
     position: absolute;
     top: 64px;
